8334505: RISC-V: Several tests fail when MaxVectorSize does not match VM_Version::_initial_vector_length